--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tictactoe-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://InHongJeon.github.io//react-tictactoe/",
+  "homepage": "https://InHongJeon.github.io//tictactoe-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
